Fix truncate description at product show

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -117,3 +117,11 @@
 .product-list-description {
     max-height: 200px;
 }
+
+.product-desc {
+    max-height: 120px;
+}
+
+a.readmore {
+    display: none;
+}
